[CX-805] Fix collapsing textarea content (#296)

--- a/src/components/property/report/form/property-report-form.module.scss
+++ b/src/components/property/report/form/property-report-form.module.scss
@@ -12,8 +12,13 @@
 
 .message {
   margin-top: calc(var(--spacing) * 2);
+
   textarea {
     border-width: var(--spacing) calc(var(--spacing) * 3);
+  }
+
+  textarea,
+  label {
     font-size: var(--font-size-08);
   }
 }
